--- a/theme.html
+++ b/theme.html
@@ -267,6 +267,12 @@
         $('div.mobile-nav ul').toggle('fast', function() {});
       });
     </script>
-
+{% if site.tags %}
+  <div class="tags">
+    {% for tag in site.tags %}
+      <a href="/tag/{{ tag.name }}">#{{ tag.name }}</a>
+    {% endfor %}
+  </div>
+{% endif %}
   </body>
 </html>
