--- a/theme.html
+++ b/theme.html
@@ -14,7 +14,7 @@
     {{ header_meta }}
 
     <link href="{{ assets('css/style.css') }}" rel="stylesheet" />
-
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,greek-ext,greek' rel='stylesheet' type='text/css'>
     <!--[if IE 7]>
       <link href="http://postach.io/static/themes/_assets/fontawesome/css/font-awesome-ie7.min.css" rel="stylesheet">
     <![endif]-->
