--- a/theme.html
+++ b/theme.html
@@ -86,7 +86,7 @@
             <a href="{{ post.permalink }}">
             {% endif %}
               {% if photo %}
-              <img src="{{ photo.width_600 }}" />
+              <img src="{{ photo.width_700 }}" />
               {% else %}
               <img src="http://placehold.it/400x300/0eafff/ffffff.png" alt="" />
               {% endif %}
@@ -244,7 +244,7 @@
       <footer class="footer">
         <div class="copyright">
           <p class="pull-left">All rights Reserved &copy; <a href="/">{{ site.name }}</a>.</p>
-          <p class="pull-right">Powered by <a href="http://postach.io" target="_blank">Postach.io</a> | Design based on <a href="http://www.eleventhemes.com/gridly-theme/">Gridly</a></p>
+          <p class="pull-right">Powered by <a href="http://postach.io" target="_blank">Postach.io</a> | 
   
     
 
